[gd_scene load_steps=4 format=3 uid="uid://dmyurw5rbxyib"]

[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/proceed_button.gd" id="1_iucy3"]

[sub_resource type="LabelSettings" id="LabelSettings_lxaxv"]
font_size = 57
font_color = Color(0.568627, 0.568627, 0.568627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5lels"]
font_color = Color(0.568627, 0.568627, 0.568627, 1)

[node name="ask_for_number_of_questions" type="Node2D"]

[node name="question_label" type="Label" parent="."]
offset_left = 21.0
offset_top = 18.0
offset_right = 808.0
offset_bottom = 74.0
text = "How many training questions will you enter?"
label_settings = SubResource("LabelSettings_lxaxv")

[node name="requirements_label" type="Label" parent="."]
offset_left = 22.0
offset_top = 109.0
offset_right = 479.0
offset_bottom = 165.0
text = "Recommended: 200
Max: 300"
label_settings = SubResource("LabelSettings_5lels")

[node name="proceed_line_edit" type="LineEdit" parent="."]
offset_left = 20.0
offset_top = 182.0
offset_right = 428.0
offset_bottom = 239.0
placeholder_text = "# of questions"

[node name="proceed_button" type="Button" parent="."]
offset_left = 18.0
offset_top = 244.0
offset_right = 126.0
offset_bottom = 287.0
script = ExtResource("1_iucy3")

[node name="confirm_questions" type="ConfirmationDialog" parent="proceed_button"]
title = ""
position = Vector2i(476, 276)
visible = true

[connection signal="text_changed" from="proceed_line_edit" to="proceed_button" method="_on_proceed_line_edit_text_changed"]
[connection signal="pressed" from="proceed_button" to="proceed_button" method="_on_pressed"]
[connection signal="confirmed" from="proceed_button/confirm_questions" to="proceed_button" method="_on_confirm_questions_confirmed"]
